<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="50dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="10dp">

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/description_item_icon"
            app:srcCompat="@drawable/icon_image_load_error" />

        <TextView
            android:id="@+id/item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/item_rarity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/item_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/item_requiredLevel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/item_description"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/layout_vendorPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_coin"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:contentDescription="@string/description_currency_icon"
            app:srcCompat="@drawable/coin" />

        <TextView
            android:id="@+id/item_value_gold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/number_zero" />

        <ImageView
            android:id="@+id/image_silver"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:contentDescription="@string/description_currency_icon"
            app:srcCompat="@drawable/coin_silver" />

        <TextView
            android:id="@+id/item_value_silver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/number_zero" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:contentDescription="@string/description_currency_icon"
            app:srcCompat="@drawable/coin_copper" />

        <TextView
            android:id="@+id/item_value_copper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/number_zero" />
    </LinearLayout>

</LinearLayout>