<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_fire"
    tools:context=".ShowAccountActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal"
                android:paddingBottom="15dp">

                <TextView
                    android:id="@+id/textView_key_accountName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-light"
                    android:text="@string/text_account"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView_value_accountName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_wallet_button"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/background_button"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <LinearLayout
                    android:id="@+id/layout_wallet_values"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/layout_coin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start|center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/image_coin_gold"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_weight="1"
                            android:contentDescription="@string/description_currency_icon"
                            app:srcCompat="@drawable/coin" />

                        <TextView
                            android:id="@+id/textView_value_gold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_view_loading" />

                        <ImageView
                            android:id="@+id/image_coin_silver"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_weight="1"
                            android:contentDescription="@string/description_currency_icon"
                            app:srcCompat="@drawable/coin_silver" />

                        <TextView
                            android:id="@+id/textView_value_silver"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <ImageView
                            android:id="@+id/image_coin_copper"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_weight="1"
                            android:contentDescription="@string/description_currency_icon"
                            app:srcCompat="@drawable/coin_copper" />

                        <TextView
                            android:id="@+id/textView_value_copper"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout_karma"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start|center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/image_karma"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_weight="1"
                            android:contentDescription="@string/description_currency_icon"
                            app:srcCompat="@drawable/karma" />

                        <TextView
                            android:id="@+id/textView_value_karma"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/text_view_loading" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout_gem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start|center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/image_gem"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_weight="1"
                            android:contentDescription="@string/description_currency_icon"
                            app:srcCompat="@drawable/blacklion_gem" />

                        <TextView
                            android:id="@+id/textView_value_gem"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/text_view_loading" />
                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/textView_wallet_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/text_wallet"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:text="@string/text_wallet"
                    android:textSize="30sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_whole_inventory_button"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/background_button"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/textView_whole_inventory_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:text="@string/text_account_inventory"
                    android:textSize="30sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView_characters_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:paddingTop="15dp"
                android:text="@string/text_characters"
                android:textAlignment="center"
                android:textSize="20sp" />

            <ProgressBar
                android:id="@+id/progressBar_characterLoading"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progressTint="@color/yellow" />

            <HorizontalScrollView
                android:id="@+id/scrollView_characters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/characters_view"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" />
            </HorizontalScrollView>

            <TextView
                android:id="@+id/textView_dailyFractals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:paddingTop="20dp"
                android:text="@string/text_daily_fractals"
                android:textAlignment="center"
                android:textSize="20sp" />

            <ProgressBar
                android:id="@+id/progressBar_dailyFractalsLoading"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progress="0"
                android:progressTint="@color/yellow" />

            <LinearLayout
                android:id="@+id/slot_dailyFractalsToday"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"></LinearLayout>

            <TextView
                android:id="@+id/textView_raids"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:paddingTop="20dp"
                android:text="@string/text_weekly_raids"
                android:textAlignment="center"
                android:textSize="20sp" />

            <ProgressBar
                android:id="@+id/progressBar_weeklyRaidsLoading"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progress="0"
                android:progressTint="@color/yellow" />

            <LinearLayout
                android:id="@+id/slot_weeklyRaids"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"></LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>